k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azfuncapp
  namespace: prod
spec:
  selector:
      matchLabels:
        app: azfuncapp
  replicas: 1
  template:
      metadata:
        labels:
          app: azfuncapp
      spec:
        containers:
        - name: azfunc-repository-stats
          image: yvand/azfunc-repository-stats:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
