k8s-manifests/azfuncapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azfuncapp-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: azfuncapp
  ports:
  - protocol: TCP
    port: 20080
    targetPort: 80
