k8s-manifests/azfuncapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: azfuncapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: azfuncapp-service
            servicePort: 20080
