k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: azfuncapp-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: azfuncapp-service
    servicePort: 20080
